--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.6"
     },
     "dependencies": {
+        "font-awesome": "^4.7.0",
         "jquery-datetimepicker": "^2.5.20",
         "jquery-ui": "^1.12.1",
         "jquery.repeater": "^1.2.1",
